<resources>
    <string name="app_name">The Cornellian App</string>
    <string name="editorial_board">Editorial Board</string>
    <string name="feedbackButton">Submit Feedback</string>
    <string name="messageHint">Your message here...</string>
    <string name="namePrompt">Who are you?</string>
    <string name="contactUsTitle">Contact Us!</string>
    <string name="facebookButtonDesc">Image Button to take you to the Cornellian Facebook</string>
    <string name="twitterButtonDesc">Image Button to take you to the Cornellian Twitter</string>
    <string name="websiteButtonDesc">Image Button to take you to the Cornellian Website</string>
    <string name="cornellianHead">Header with Cornellian Text</string>
    <string name="mainButtonText">Main</string>
    <string name="aboutUsButtonText">About Us</string>
    <string name="contactUsButtonText">Contact Us</string>
    <string name="archiveButtonText">Archive</string>
    <string name="introduction">\tThe Cornellian Newspaper is the school newspaper for Cornell College in Mount Vernon, Iowa. It has been in print for over eighty years. It publishes one paper copy each block and will be publishing shorter online articles between the weeks that there is no paper copy. If you have any suggestions or comments you wish to make about the paper, please direct them to the current editor in chief. If you are interested in joining our staff, please contact the current editor in chief.</string>
    <string name="editorHeader">Editorial Board</string>
    <string name="introHeader">Introduction</string>
    <string name="editorChief"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/editor-in-chief/">Editor in Chief: M.E. Scoonover-Nelson</a></string>
    <string name="assistantEditorChief"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/assistant-editor-in-chief/">Assistant Editor in Chief: Angel Fabila</a></string>
    <string name="newsEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/news-editor/">News Editor: Matthew McDermott</a></string>
    <string name="featuresEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/features-editor/">Features Editor: Emily Maniacci</a></string>
    <string name="artEntertainmentEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/arts-entertainment-editor/">Arts/Entertainment Editor: Maddie Leman</a></string>
    <string name="opinionEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/opinions-editor/">Opinion Editor: Sofia Lopera Cordona</a></string>
    <string name="copyEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/copy-editor/">Copy Editor: Alexandra Lewyn</a></string>
    <string name="layoutEditor"><a href="https://blogs.cornellcollege.edu/cornellian/editorial-staff/layout-editor/">Layout Editor: Sage Parker</a></string>
    <string name="feedRefreshText">Click to Refresh Feed</string>
    <string name="titleBoxText">Title</string>
    <string name="authorBoxText">Author</string>
    <string name="dateBoxText">Pub Date</string>
    <string name="contextBoxText">Content</string>
    <string name="refreshImageDesc">Android Source Image Files Refresh</string>
    <string name="RefreshPicture">Android-supplied refresh picture</string>
    <string name="EmailBtn">SEND A LETTER TO THE EDITOR</string>
    <string name="Question">Do you have any comments, questions, or suggestions? </string>
    <string name="DirectTo">Our meetings are held every Sunday at 5:30 p.m. at Russell Hall</string>


    <array name="activities">
        <item>Latest News</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>Archives</item>
    </array>

    <string-array name="staff">
        <item>Editorial Board</item>
        <item>Editor-in-Chief: M.E. Scoonover-Nelson</item>
        <item>Assistant Editor-in-Chief: Angel Fabila</item>
        <item>News Editor: </item>
        <item>Features Editor: </item>
        <item>Arts and Entertainment Editor: </item>
        <item>Copy Editor: </item>
        <item>Layout Editor: </item>
        <item>Social Media Manager: </item>
        <item>Photographer: </item>
    </string-array>
</resources>
