<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="@color/colorPrimary"
    android:id="@+id/relativeLayout">


    <ImageView
        android:id="@+id/cornellianHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cornellianHead"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/cornellian_head"
        tools:layout_conversion_absoluteHeight="357dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="384dp" />

    <Button
        android:id="@+id/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:text="@string/mainButtonText"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorAccent"
        android:typeface="serif"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/AboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:gravity="center"
        android:text="@string/aboutUsButtonText"
        android:textColor="@color/colorAccent"
        android:typeface="serif"
        app:layout_constraintStart_toEndOf="@+id/MainButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/ContactUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:text="@string/contactUsButtonText"
        android:textColor="@color/colorPrimary"
        android:typeface="serif"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/AboutUsButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/ArchiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:gravity="center"
        android:text="@string/archiveButtonText"
        android:textColor="@color/colorPrimary"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ContactUsButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_conversion_absoluteWidth="120dp" />

    <TextView
        android:id="@+id/Introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:gravity="center"
        app:fontFamily="serif"
        tools:layout_conversion_absoluteHeight="140dp"
        tools:layout_editor_absoluteY="219dp"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_conversion_absoluteWidth="358dp" />

    <TextView
        android:id="@+id/EditorialHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/editorHeader"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="serif"
        tools:layout_conversion_absoluteHeight="22dp"
        tools:layout_editor_absoluteY="391dp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_conversion_absoluteWidth="151dp" />

    <TextView
        android:id="@+id/IntroHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introHeader"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="16sp"
        app:fontFamily="serif"
        tools:layout_conversion_absoluteHeight="26dp"
        tools:layout_editor_absoluteY="194dp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_conversion_absoluteWidth="99dp" />

    <TextView
        android:id="@+id/EditorChief"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editorChief"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="413dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/AssistantEditorChief"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assistantEditorChief"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textColorLink="#523178"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="429dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/NewsEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsEditor"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="445dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/FeaturesEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featuresEditor"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="461dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/ArtEntertainmentEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artEntertainmentEditor"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="477dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/OpinionEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opinionEditor"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="493dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/CopyEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyEditor"
        android:typeface="serif"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:gravity="center"
        android:textSize="12sp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_editor_absoluteY="509dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <TextView
        android:id="@+id/LayoutEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/layoutEditor"
        android:textColor="@android:color/black"
        android:textColorLink="#523178"
        android:textSize="12sp"
        android:typeface="serif"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_editor_absoluteY="525dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_conversion_absoluteWidth="250dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:foregroundGravity="center"
        tools:layout_conversion_absoluteHeight="4dp"
        tools:layout_editor_absoluteY="365dp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_conversion_absoluteWidth="299dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Background"
        android:foregroundGravity="center"
        tools:layout_conversion_absoluteHeight="4dp"
        tools:layout_editor_absoluteY="376dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_conversion_absoluteWidth="344dp" />

</android.support.constraint.ConstraintLayout>