<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="139dp"
        android:layout_marginBottom="380dp"
        android:text="@string/mainButtonText"
        android:background="@color/Background"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorAccent"
        android:typeface="serif" />

    <Button
        android:id="@+id/AboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="139dp"
        android:layout_marginBottom="380dp"
        android:background="@color/Background"
        android:text="@string/aboutUsButtonText"
        android:textColor="@color/colorPrimary"
        android:typeface="serif" />

    <Button
        android:id="@+id/ContactUsButton"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="139dp"
        android:layout_marginBottom="380dp"
        android:layout_toEndOf="@+id/AboutUsButton"
        android:layout_toRightOf="@+id/AboutUsButton"
        android:background="@color/Background"
        android:text="@string/contactUsButtonText"
        android:textColor="@color/colorPrimary"
        android:typeface="serif" />

    <Button
        android:id="@+id/ArchiveButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="380dp"
        android:layout_toEndOf="@+id/ContactUsButton"
        android:layout_toRightOf="@+id/ContactUsButton"
        android:background="@color/Background"
        android:text="@string/archiveButtonText"
        android:textColor="@color/colorPrimary"
        android:typeface="serif" />

</RelativeLayout>
