<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact_Us">

    <ImageView
        android:id="@+id/cornellianHead"
        android:layout_width="435dp"
        android:layout_height="131dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/cornellianHead"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cornellian_head" />

    <Spinner
        android:id="@+id/activitySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:dropDownSelector="@color/colorPrimary"
        android:entries="@array/activities"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Question"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cornellianHead"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/EmailButton"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_alignTop="@+id/MainButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/EmailBtn"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/DirectTo"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="280dp"
        android:layout_height="6dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="330dp"
        android:layout_height="6dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="72dp"
        android:layout_height="73dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/facebookButtonDesc"
        android:onClick="facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twitter_button"
        app:srcCompat="@drawable/facebookicon_50x50" />

    <ImageButton
        android:id="@+id/twitter_button"
        android:layout_width="67dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/twitterButtonDesc"
        android:onClick="twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cornellian_button"
        app:layout_constraintStart_toEndOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/md_5a97a256bfab4_50x50" />

    <ImageButton
        android:id="@+id/cornellian_button"
        android:layout_width="67dp"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/websiteButtonDesc"
        android:onClick="website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twitter_button"
        app:srcCompat="@drawable/globeicon_50x50" />


</android.support.constraint.ConstraintLayout>